--- a/index.html
+++ b/index.html
@@ -1,60 +1,43 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>Startup</title>
-
-    <!-- Google Fonts -->
-    <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
-
-    <!-- Note that the below Bootstrap file is a specific version. If you grab the most
-    current from Bootstrap website, you will see the button grow transition being a lot faster
-    than in my video. Use whichever style sheet you like best! -->
-    <!-- Bootstrap CSS from a CDN. This way you don't have to include the bootstrap file yourself -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-
-    <link href="//cdn-images.mailchimp.com/embedcode/slim-10_7.css" rel="stylesheet" type="text/css">
-<style type="text/css">
-  #mc_embed_signup{clear:left; font:14px Helvetica,Arial,sans-serif; }
-  /* Add your own Mailchimp form style overrides in your site stylesheet or in this style block.
-     We recommend moving this block and the preceding CSS link to the HEAD of your HTML file. */
-</style>
-
-    <!-- My own stylesheet -->
-    <link href="style.css" rel="stylesheet">
-  </head>
-  <body>
-    <header class="startup text-center text-white d-flex">
-      <div class="container my-auto">
-        <div class="row">
-          <div class="col-lg-12 my-auto">
-            <h1 class="text-uppercase faded">
-              <strong>the biggest startup event of the year</strong>
-            </h1>
-            <hr>
-          </div>
-          <div class="col-lg-12 my-auto">
-
-              <!-- Begin Mailchimp Signup Form -->
-
-<div id="mc_embed_signup">
-<form action="https://gmail.us20.list-manage.com/subscribe/post?u=9bc18b0ae5533d717addc5863&amp;id=7c3272a097" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
-    <div id="mc_embed_signup_scroll">
-  
-    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
-    <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_9bc18b0ae5533d717addc5863_7c3272a097" tabindex="-1" value=""></div>
-    <div class="clear"><input class="btn btn-primary btn-xl" type="submit" value="Call me" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
-    </div>
-</form>
-</div>
-
-<!--End mc_embed_signup-->
-
-
-          </div>
-        </div>
-      </div>
-    </header>
-
-  </body>
-
+<head>
+	<title>Furuikeya</title>
+	 <link rel="icon" href="gico.jpg">
+	 <!-- Google Fonts -->
+    <link href="https://fonts.googleapis.com/css?family=Hanalei+Fill" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="style.css">
+</head>
+<body>
+	<nav>
+		<div class="header">
+			<a class="brandcontainer navbtn" href="index.html">
+				<div class=" navbtn zero">
+					<img class="zero" src="logo184.jpg" width="40" height="40">
+					<img class="zero" src="logo184.jpg" width="40" height="40">
+					<img class="zero" src="logo184.jpg" width="40" height="40">
+				</div>	
+				<div class="navbtn">furuikeya project:</div>
+			</a>
+			<a href="om.html" class="navbtn">
+				<div class="navbtn menubutton">web</div>
+			</a>
+			<a href="#" class="navbtn">
+				<div class="navbtn menubutton">drawings</div>
+			</a>
+			<a href="#" class="navbtn">
+				<div class="navbtn menubutton">gallery</div>
+			</a>
+		</div>
+	</nav>
+	
+	<div id="bgrnd">
+		<a class="noshow" href="file:///C:/Coding/FP/index.html">
+			<div class="mainflex">
+				<div id="centerwindow">
+					<img id="mainwindowlogo"src="logo184.jpg" width="400" height="400">
+				</div>
+			</div>
+		</a>
+	</div>
+</body>
 </html>
